# AhoTransformer

./: .gitignore  README.md  aho_decoder_transformer.onnx  decoderonly.py  encoderonly.py  inference.html  pyproject.toml  requirements.txt  test-onnx.mjs
configs/: default.yaml
docs/: aho_decoder_transformer.onnx  index.html  onnx-test.mjs  package.json
images/: gpt-decoder-only-block.af  transformer-encoder-block.af
models/: decoder_epoch_40.pth  decoder_epoch_60.pth  encoder_epoch_30.pth
scripts/: evaluate.py  train.py
src/aho_transformer/: __init__.py  cli.py  trainer.py
src/aho_transformer/models/: __init__.py  transformer.py
src/aho_transformer/utils/: __init__.py  checkpoint.py  config.py  logging.py
tests/: __init__.py  test_data.py  test_model.py  test_trainer.py  test_utils.py
