[project]
name = "ahotransformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "tensorboard",
]
optional-dependencies = { dev = ["pytest", "ruff"] }

[tool.uv.pip]
torch-backend = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"