# 環境構築方法
# % uv venv
# % uv pip sync pyproject.toml --torch-backend=auto
# % uv pip install torch --torch-backend=auto

[project]
name = "ahotransformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "numpy",
    "tensorboard",
]
optional-dependencies = { dev = ["pytest", "ruff"] }

[tool.uv.pip]
torch-backend = "auto"
